# autojig_templated

./: .gitignore  Dockerfile  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
requirements/: requirements-docs.txt  requirements-lint.txt  requirements-test.txt
src/gimmeJig/: __init__.py  gimmeJig.py  notebook.ipynb
src/python_template/: example.py  gimmeJig.py
tests/: __init__.py  test_example.py
